--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="koffi.simplifiedcodingalpha.com.jonadanapaul">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/alpha_logo"
@@ -20,7 +22,9 @@
             android:name=".activities.SignInAct"
             android:label="" />
         <activity android:name=".activities.MainActivity" />
-        <activity android:name=".activities.ProjektInitAct"></activity>
+        <activity android:name=".activities.ProjektInit1von4Act" />
+        <activity android:name=".activities.ProjektInit2von4Act" />
+        <activity android:name=".activities.ProjektInit3von4Act"></activity>
     </application>
 
 </manifest>
